--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Главная</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/projects.html">Проекты</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/diary.html">Дневник</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">Проекты</a></li>
+                    <li class="nav-item"><a class="nav-link" href="diary.html">Дневник</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
         </div>
