--- a/contacts.html
+++ b/contacts.html
@@ -155,6 +155,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-    <script src="../scripts/form-validation.js"></script>
+    <script src="form-validation.js"></script>
 </body>
 </html>
