--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand" href="index.html">
                 <img src="../images/logo.png" alt="Логотип" width="30" height="30">
                 Иван Иванов
             </a>
