--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="Логотип" width="30" height="30" class="d-inline-block align-top">
-                Иван Иванов
+                Арслан Халилов
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -34,15 +34,15 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <h1 class="display-4 fw-bold">Привет! Я студент</h1>
-                    <p class="lead fs-4">группы 30БО-99-99</p>
+                    <h1 class="display-4 fw-bold">Привет! Я студент Арслан</h1>
+                    <p class="lead fs-4">группы ЭФБО-10-24</p>
                     <p class="fs-5">Увлекаюсь веб-разработкой и созданием современных интерфейсов</p>
                     <a href="assets/resume.pdf" class="btn btn-light btn-lg mt-3" download>
                         <i class="bi bi-download"></i> Скачать резюме
                     </a>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="images/photo.jpg" alt="Фото студента" class="img-fluid rounded-circle shadow-lg" width="350">
+                    <img src="arslan.jpg" alt="Фото студента" class="img-fluid rounded-circle shadow-lg" width="350">
                 </div>
             </div>
         </div>
