--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="Логотип" width="30" height="30" class="d-inline-block align-top">
+                <img src="arslan.jpg" alt="Логотип" width="30" height="30" class="d-inline-block align-top">
                 Арслан Халилов
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
