--- a/diary.html
+++ b/diary.html
@@ -12,7 +12,7 @@
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="arslan.jpg" alt="Логотип" width="30" height="30">
-                Иван Иванов
+                Арслан Халилов
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
