--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
                     <li class="nav-item"><a class="nav-link active" href="projects.html">Проекты</a></li>
                     <li class="nav-item"><a class="nav-link" href="diary.html">Дневник</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
