--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="../images/logo.png" alt="Логотип" width="30" height="30">
-                Иван Иванов
+                <img src="arslan.jpg" alt="Логотип" width="30" height="30">
+                Арслан Халилов
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
